css/main.css
@import url('https://fonts.googleapis.com/css2?family=Cutive&family=Montserrat:ital,wght@1,400;1,800&family=Questrial&display=swap');
@import url("https://use.typekit.net/igf7ufo.css");

body {
  margin: 0;
  background-color: #ffd191;
}

/* Header */
header {
  color: #211e20;
  font-family: 'Cutive', Verdana, Tahoma, sans-serif;
  font-weight: 800;
  font-style: italic;

  letter-spacing: 0.1rem;
  text-align: center;
}

h1 {
  padding: 1rem 0 1rem 0;
  margin-bottom: 0;

}
h1 a {
  margin: 0;

  color: #211e20;
  font-family: 'Montserrat', 'Segoe UI', sans-serif;
  font-size: clamp(36px, 12vw, 7rem);
  text-transform: uppercase;
  text-shadow: 4px 5px 1px #66605c;
}

h1 a:hover {
  color: #ff924f;
}

header .fa-eye {
  color: #b99bdb;
}

/* Horizontal Nav Bar */
nav {
  display: flex;
  justify-content: center;

  background-color: #ff924f;
}

.cb {
  opacity: 0;
}

ul {
  margin: 0 2rem 0 1rem;
  padding: 0;
}

ul li {
  display: inline-flex;
  justify-content: space-around;

  list-style: none;

  font-family: 'Montserrat', 'Segoe UI', sans-serif;
  font-variant: small-caps;
  line-height: 1rem;
}

li a {
  padding: 1rem;
  align-content: center;

  font-size: clamp(1.5rem, 4vw, 1.8rem);
}

i.hlogo {
  display: none;
}

a {
  color: black;
  text-decoration: none;
}

.hmenu a:hover {
  border: 1px solid transparent;
  border-radius: 2px 2px 0 0;

  font-family: 'Aktiv-Grotesk-Extended', sans-serif;
  font-variant: none;
  text-transform: uppercase;
}

.button {
  display: block;
  align-self: center;

  font-size: 2.2rem;
  color: #211e20;
}

.tix {
  display: none;
}

.wrap {
  display: inline-block;
  padding-top: 0;
  padding-bottom: 0;

  border: 1px solid transparent;
  border-radius: 2px 2px 0 0;
}

.button:hover {
  background: none;
  mask-image: unset;
  -webkit-mask-image: unset;
}

.wrap:hover .tix {
  display: block;

  border: 1px solid transparent;
  border-radius: 2px 2px 0 0;
}

.wrap:hover .button {
  display: none;
}

/* Main */
.subh2 {
  display: grid;
  justify-items: center;
}

h2 {
  margin-bottom: 0;
  color: #211e20;
  font-family: 'Aktiv-Grotesk-Extended', sans-serif;
  font-weight: 400;
  font-style: italic;
  font-size: clamp(1rem, 7vw, 3rem);
  letter-spacing: 0.5rem;

  text-transform: uppercase;
  text-align: center;
}

.loader {
  margin: 0;
  width: clamp(30rem, 20vw, 45rem);
  height: 50px;
  overflow: hidden;
}

.loader::before {
content: attr(data-text);
position: relative;
top: -42px;
width: calc(100% + 27px);

color: #ffd191;
font-size: 4em;
text-decoration: wavy;
text-decoration-color: #b99bdb;
text-decoration-line: underline;

animation: animate 0.5s linear infinite;
}

@keyframes animate {
  0% {
    left: -3px;
  }
  100% {
    left: -30px;
  }
}

.grid {
  /* below are my attempts at a grid for three columns to one column on mobile w/out media query*/
  /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
  /* grid-template-columns: 1fr 1fr 1fr; */
  /* grid-template-columns: repeat(auto-fit, minmax( min((51rem - 100%) * 999, 100%), 1fr)); */
  --preferred-value: ((var(--max-card-width) * var(--cols) - var(--gap) * 2) - 100%) * 999;
  --gap: 20px;
  --max-card-width: 282px;
  --cols: 3;

  display: grid;
  grid-template-columns:
    repeat(auto-fit, minmax(clamp(33.3333% - var(--gap), var(--preferred-value), 100%), 1fr));
  grid-template-rows: auto;
  grid-gap: 20px;

  justify-items: center;
  align-items: baseline;
}

.item {
  display: grid;
  object-fit: contain;
  justify-items: center;

  font-family: 'Cutive', Verdana, Tahoma, sans-serif;
  font-size: clamp(18px, 10vw, 1rem);
  line-height: 2rem;
}

.item p {
  color: #211e20;
  font-family: 'Aktiv-Grotesk-Extended', sans-serif;
  font-weight: 700;
  font-size: 1.2rem;
}

p i {
  font-size: 1.5rem;
}

.item img {
  padding: 0.1rem;
  height: 300px;

  border: 3px solid #b99bdb;
  box-shadow: 10px 10px rgba(102, 96, 92, 0.5);
}

figcaption {
  padding-top: 1rem;
  min-width: 0.5rem;
  font-size: clamp(18px, 12vw, 1rem);

  letter-spacing: 0.3rem;
  text-align: center;
}

h3 {
  font-family: 'Cutive', Verdana, Tahoma, sans-serif;
  font-size: clamp(28px, 12vw, 2rem);
}

/* Footer */
footer {
  text-align: center;
  font-style: italic;
}

.socnav {
  list-style: none;

  display: inline-flex;
  padding-top: 0;
  margin-bottom: 0.5rem;
}

.socnav img {
  width: 30px;
  height: 28px;

  border: none;
  box-shadow: none;
  background: transparent;
}

.socnav a {
  padding: 2px;
  margin: 2rem;
}

.socnav a > *:hover {
  box-shadow: 5px 5px 8px 3px #b99bdb;
  /* border: 1px solid transparent; */
  border-radius: 60%;
}

/* MEDIA QUERIES for Nav */
/*  Hamburger Menu */
@media screen and (max-width: 820px) {

  nav {
    background-color: #ff924f;
    justify-content: center;
  }

  .hlogo {
    margin-right: 0.5rem;
    color: #ffd191;
    text-align: center;
    font-size: 5rem;

    -webkit-transition: -webkit-transform .5s ease-in-out;
    -ms-transition: -ms-transform .5s ease-in-out;
    transition: transform .5s ease-in-out;
  }

  .hlogo:hover {
    transform: rotate(30deg);
    -ms-transform: rotate(30deg);
    -webkit-transform: rotate(30deg);
  }

  .hmenu {
    display: none;
  }

  #ham:checked~.hmenu {
    display: block;
  }

  li a {
    font-size: 2rem;
    line-height: 2rem;
  }

  li a:hover {
    letter-spacing: normal;
  }

  .container {
    margin: 0;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    grid-template-columns: 30ch;
    grid-template-areas:
      "item1"
      "item2"
      /* "icon" */
      "item3"
      "item4";
  }

  .item3 {
    grid-area: item4;
    align-self: center;
  }

  .item4 {
    grid-area: item3;
    align-self: center;

    font-size: 20rem;
  }
}

/* DESKTOP*/
@media screen and (min-width: 820px) {

  .hlogo {
    display: none;
  }

  li {
    display: inline-block;
  }
}

